live example nearly works

--- a/example/live/package.json
+++ b/example/live/package.json
@@ -16,6 +16,7 @@
     "watchify": "~0.5.0"
   },
   "scripts": {
+    "start": "node server.js",
     "build": "browserify browser.js -t brfs-o static/bundle.js",
     "watch": "watchify browser.js -t brfs -o static/bundle.js -dv"
   }
