using attr-submit

--- a/example/live/package.json
+++ b/example/live/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "attr-range": "~0.0.0",
+    "attr-chooser": "~0.0.0",
+    "attr-submit": "~0.0.0",
     "brfs": "~0.0.8",
     "ecstatic": "~0.4.13",
     "hyperspace": "~0.9.1",
