--- a/example/live/package.json
+++ b/example/live/package.json
@@ -11,7 +11,8 @@
     "hyperstream": "~0.5.0",
     "level": "~0.18.0",
     "multilevel-feed": "~0.0.0",
-    "shoe": "~0.0.15"
+    "shoe": "~0.0.15",
+    "observable": "~2.1.3"
   },
   "devDependencies": {
     "browserify": "~3.20.0",
